# shikigen

./: .claude  .editorconfig  .gitignore  CODEX.md  CONTEXT.md  lin.js  lin.md  package.json  pnpm-lock.yaml  pyrightconfig.json  skills-lock.json
.agents/: AGENTS.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: main.py
apps/api/app/agent/: __init__.py  agent.py  agent_factory.py  main.py
apps/api/app/agent/tools/: __init__.py  make_tool.py  registry.py
apps/api/app/agent/tools/builtin/: __init__.py
apps/backend/: .env.example  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/agent/: agent.py  agent_factory.py  core.py  main.py
apps/backend/app/agent/mcp/: __init__.py  client.py
apps/backend/app/agent/middlewares/: toolTtracking.py
apps/backend/app/agent/skills/: __init__.py  base.py  registry.py
apps/backend/app/agent/tools/: registry.py  sync.py  tools.py
apps/backend/app/community/baidu/: tool.py  web_search_client.py
apps/backend/app/community/jina_ai/: jina_client.py  tool.py
apps/backend/app/models/: schemas.py
apps/backend/app/routes/: chat.py
apps/backend/app/utils/: readability.py
apps/frontend/: package.json
apps/frontend/app/: page.tsx
apps/web/: next.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
