[project]
name = "shikigen-api"
version = "0.0.1"
description = "Shikigen AI Agent backend — FastAPI + LangChain DeepAgents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "deepagents>=0.1.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "langchain-deepseek>=1.1.0",
]

[tool.uv]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
